Commit aula 6 Arrumado
up 4

--- a/Html/Robo Otto Aula 6/index.html
+++ b/Html/Robo Otto Aula 6/index.html
@@ -10,6 +10,19 @@
     </head>
 
     <body>
-        <h1>Robo Otto</h1>
+        <main id="menu">
+            <ul>
+                <li><a href="#">CSS</a></li>
+                <ul>
+                    <li><a href="page/pseudoclasse.html">Pseudoclasse</a></li>
+                    <li><a href="page/texto.html">Texto</a></li>
+                    <li><a href="page/fonte.html">Fonte</a></li>
+                    <li><a href="page/posicionamento.html">Posicionamento</a></li>
+                </ul>
+                <li><a href="page/formulario.html">Formulário</a></li>
+                <li><a href="page/sobre.html">Sobre</a></li>
+                <li><a href="page/contato.html">Contato</a></li>
+            </ul>
+        </main>
     </body>
 </html>
