--- a/Html/Robo Otto/index.html
+++ b/Html/Robo Otto/index.html
@@ -10,19 +10,6 @@
     </head>
 
     <body>
-        <main id="menu">
-            <ul>
-                <li><a href="#">CSS</a></li>
-                <ul>
-                    <li><a href="page/pseudoclasse.html">Pseudoclasse</a></li>
-                    <li><a href="page/texto.html">Texto</a></li>
-                    <li><a href="page/fonte.html">Fonte</a></li>
-                    <li><a href="page/posicionamento.html">Posicionamento</a></li>
-                </ul>
-                <li><a href="page/formulario.html">Formulário</a></li>
-                <li><a href="page/sobre.html">Sobre</a></li>
-                <li><a href="page/contato.html">Contato</a></li>
-            </ul>
-        </main>
+        <h1>Robo Otto</h1>
     </body>
 </html>
