--- a/Html/Exercicios Aula 6/index.html
+++ b/Html/Exercicios Aula 6/index.html
@@ -15,9 +15,10 @@
                 <li><a href="page/about.html">Sobre</a></li>
                 <li><a href="page/visit.html">Visitas Inusitadas</a></li>
                 <li><a href="page/contacts.html"></a>Contatos</li>
-                <li><a href="page/talk">Fale Conosco</a></li>
+                <li><a href="page/talk.html">Fale Conosco</a></li>
             </ul>
         </ul>
     </main>
+    
 </body>
 </html>
