--- a/Html/Exercicios Aula 6/index.html
+++ b/Html/Exercicios Aula 6/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizzaria toth</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Robo Otto Toth</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <main id="menu">
         <ul>
-            <li><a href="#"></a></li>
+            <li><a href="#"0>CSS</a></li>
             <ul>
                 <li><a href="page/about.html">Sobre</a></li>
-                <li><a href="page/visit.html">Visitas Inusitadas</a></li>
-                <li><a href="page/contacts.html"></a>Contatos</li>
+                <li id="teste"><a href="page/visit.html">Visitas Inusitadas</a></li>
+                <li><a href="page/contact.html"></a>Contatos</li>
                 <li><a href="page/talk.html">Fale Conosco</a></li>
             </ul>
         </ul>
     </main>
-    
 </body>
 </html>
