--- a/Html/Exercicios Aula 6/index.html
+++ b/Html/Exercicios Aula 6/index.html
@@ -1,3 +1,9 @@
+<!--
+    Este exercícios tem como intenção aprimorar seu conhecimento sobre
+    HTML e CSS, logo esse arquivo NÃO deve ser copiado, use-o apenas para
+    consultas, seja para remoção de dúvidas, ou quaisquer assuntos próximos.
+    Ass: Gabriel Toth Gonçalves
+-->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,10 +21,13 @@
             <ul>
                 <li><a href="page/about.html">Sobre</a></li>
                 <li id="teste"><a href="page/visit.html">Visitas Inusitadas</a></li>
-                <li><a href="page/contact.html"></a>Contatos</li>
+                <li><a href="page/contacts.html"></a>Contatos</li>
                 <li><a href="page/talk.html">Fale Conosco</a></li>
             </ul>
         </ul>
     </main>
+    <IMG src="img/pizza.jpg"></IMG>
+    <h3>Arquivo Externo, fundo mudado, margem, imagem e tabela (ul) com esse desing incrível.</h3>
+    <h3>Todo o material se encontra disponível no https://github.com/GabrielToth/PWR</h3>
 </body>
 </html>
