--- a/Html/Aula 6 - Cardápio v4/index.html
+++ b/Html/Aula 6 - Cardápio v4/index.html
@@ -21,13 +21,13 @@
             <ul>
                 <li><a href="page/about.html">Sobre</a></li>
                 <li id="teste"><a href="page/visit.html">Visitas Inusitadas</a></li>
-                <li><a href="page/contacts.html"></a>Contatos</li>
+                <li><a href="page/contacts.html">Contatos</a></li>
                 <li><a href="page/talk.html">Fale Conosco</a></li>
             </ul>
         </ul>
     </main>
-    <IMG src="img/pizza.jpg"></IMG>
     <h3>Arquivo Externo, fundo mudado, margem, imagem e tabela (ul) com esse desing incrível.</h3>
+    <h3>O arquivo inclui um menu com as informações do exercício da aula 6, versão 4</h3> <!-- Ainda que não tenha sido esclarecido na descrição do exercício, será feito o preenchimento de todas as outras sub-páginas-->
     <h3>Todo o material se encontra disponível no https://github.com/GabrielToth/PWR</h3>
 </body>
 </html>
