--- a/Html/Exercicios Aula 6/index.html
+++ b/Html/Exercicios Aula 6/index.html
@@ -10,9 +10,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Robo Otto Toth</title>
     <link rel="stylesheet" href="css/styles.css">
-
+    <title>Robo Otto Toth</title>
 </head>
 <body>
     <main id="menu">
@@ -27,7 +26,7 @@
         </ul>
     </main>
     <IMG src="img/pizza.jpg"></IMG>
-    <h3>Arquivo Externo, fundo mudado, margem, imagem e tabela (ul) com esse desing incrível.</h3>
+    <h3>Arquivo Externo, fundo mudado, margem, imagem e tabela (ul) com esse desing incrível. (v3)</h3>
     <h3>Todo o material se encontra disponível no https://github.com/GabrielToth/PWR</h3>
 </body>
 </html>
