--- a/Danillo/Aula 2/index.html
+++ b/Danillo/Aula 2/index.html
@@ -9,5 +9,6 @@
 <body link="#151515" vlink="#202020" vlink="181818">
     <a href="page/image.html">NÃO CLIQUE AQUI</a>
     <h3>Todos os arquivos aqui desenvolvidos estarão à dispoção no <a href="https://bit.ly/gabrieltothpwr">GITHUB</a></h3>
+    <a href="page/image2.html">PARE DE CLICAR EM MIM</a>
 </body>
 </html>
