--- a/Flávio - Principal/Aula 6 - Cardápio v4/index.html
+++ b/Flávio - Principal/Aula 6 - Cardápio v4/index.html
@@ -25,8 +25,30 @@
             </ul>
         </ul>
     </main>
+    <h4>Para melhor atende-lo preencha o formulário abaixo para que entendamos qual sua opinião à respeito da empresa e assim aprendermos onde devemos melhorar!</h4>
+    <h2>Contamos com você!</h2>
+    <div>
+        <form name="Formulário" id="form_opinion" action="salvar.jsp" method="POST">
+            </br>
+            <label>Nome:</label><input type="text" name="name" value="" size="40" maxlength="150" />
+            </br>
+            </br>
+            <label>Email:</label> <input type="email" name="email" value="" size="100" maxlength="200" />
+            </br>
+            </br>
+            <label>Celular:</label> <input type="tel" name="tel" value="" size="40" maxlength="16">
+            </br>
+            </br>
+            <label>Opinião:</label> <textarea name="opinion" cols="30" rows="10"></textarea>
+            </br>
+            </br>
+            <input type="submit" name="Enviar" value="Salvar">
+            <input type="button" name="Chamar" value="chamar" onclick="alert('executou o alert')">
+        </form>
+    </div>
     <h3>Arquivo Externo, fundo mudado, margem, imagem e tabela (ul) com esse desing incrível.</h3>
     <h3>O arquivo inclui um menu com as informações do exercício da aula 6, versão 4</h3> <!-- Ainda que não tenha sido esclarecido na descrição do exercício, será feito o preenchimento de todas as outras sub-páginas-->
     <h3>Todo o material se encontra disponível no https://github.com/GabrielToth/PWR</h3>
+    <h3>Versão atual: 5.0 Cardápio Aula 8</h3>
 </body>
 </html>
