--- a/Flávio - Principal/Exercício Calc Soma/index.html
+++ b/Flávio - Principal/Exercício Calc Soma/index.html
@@ -3,39 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Calculadora</title>
-	<script type="text/javascript" src="js/script.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<script>
+		var n1 = Number(window.prompt('Insira um número:'))
+		var n2 = Number(window.prompt('Insira um número:'))
+		var s = n1 + n2
+		window.alert(`A soma é: ${s}`)
+	</script>
 	<div class="container">
-		<h2>Calculadora Simples</h2>
-		<br>
-		<br>
-<!--		<form>
-			<label for="num1">Número 1:</label>
-			<input type="number" name="num1" id="num1" placeholder="Insira um número">
-			<br>
-			<br>
-
-
-			<label for="num2">Número 2:</label>
-			<input type="number" name="num2" id="num2" placeholder="Insira um número">
-			<br>
-			<br>
-			
-			<label for="res">Resultado:</label>
-			<input type="number" name="res" id="res" disabled="disabled" >
-			<br>
-			<br>
-			
-			
-			<button type="button" onclick="calcular()">Calcular</button>
-		</form> -->
-		<label>Number:</label>
-		<input type="number" id="1">
-		<label>Number:</label>
-		<input type="number" id="2">
-		
+		<h2>Calculadora de Soma</h2>
+		<p>Nota extra? Pls</p>
 	</div>
 </body>
 </html>
