--- a/Flávio - Principal/Exercício Calc Soma/index.html
+++ b/Flávio - Principal/Exercício Calc Soma/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Calculadora</title>
+	<title>Calculadora</title> 
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,6 +15,8 @@
 	<div class="container">
 		<h2>Calculadora de Soma</h2>
 		<p>Nota extra? Pls</p>
+		<p>Autor: Gabriel Toth Gonçalves</p>
 	</div>
+
 </body>
 </html>
